--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -6,6 +6,7 @@ applications:
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-127.apps.evans.pal.pivotal.io
+
   services:
   - tracker-allocations-database
+  - tracker-service-registry
