--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -6,6 +6,7 @@ applications:
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT:registration-pal-127.apps.evans.pal.pivotal.io
+
   services:
   - tracker-backlog-database
+  - tracker-service-registry
