--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -7,4 +7,4 @@ applications:
   instances: 1
   services:
   - tracker-registration-database
-  - tracker-service-registry
+  - service-registry-real
